--- a/src/PreservaView/MainWindowUI.form
+++ b/src/PreservaView/MainWindowUI.form
@@ -350,12 +350,12 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jPanel7" alignment="1" pref="978" max="32767" attributes="0"/>
+                      <Component id="jPanel7" alignment="1" pref="962" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jPanel7" alignment="0" pref="374" max="32767" attributes="0"/>
+                      <Component id="jPanel7" alignment="0" pref="405" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
@@ -773,7 +773,7 @@
                                   <Component id="jLabel21" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="customerOrgNr" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="17" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="createNewCustomerBtn" pref="33" max="32767" attributes="0"/>
                                   <Component id="jButton3" max="32767" attributes="0"/>
