--- a/src/PreservaView/MainWindowUI.form
+++ b/src/PreservaView/MainWindowUI.form
@@ -350,12 +350,12 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jPanel7" alignment="1" pref="962" max="32767" attributes="0"/>
+                      <Component id="jPanel7" alignment="1" pref="978" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jPanel7" alignment="0" pref="372" max="32767" attributes="0"/>
+                      <Component id="jPanel7" alignment="0" pref="381" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
@@ -599,12 +599,7 @@
                     <Component class="javax.swing.JComboBox" name="cmbKundnamn">
                       <Properties>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                          <StringArray count="4">
-                            <StringItem index="0" value="Ny Kund"/>
-                            <StringItem index="1" value="Preserva"/>
-                            <StringItem index="2" value="Regering"/>
-                            <StringItem index="3" value="Riksdag"/>
-                          </StringArray>
+                          <StringArray count="0"/>
                         </Property>
                       </Properties>
                       <Events>
