--- a/src/PreservaView/MainWindowUI.form
+++ b/src/PreservaView/MainWindowUI.form
@@ -295,8 +295,8 @@
                             <Column editable="true" title="Status" type="java.lang.Object"/>
                             <Column editable="true" title="Kommentar" type="java.lang.Object"/>
                             <Column editable="true" title="URL" type="java.lang.Object"/>
-                            <Column editable="true" title="" type="java.lang.Object"/>
-                            <Column editable="true" title="" type="java.lang.Object"/>
+                            <Column editable="true" title="Rapport" type="java.lang.Object"/>
+                            <Column editable="true" title="Starta insamling" type="java.lang.Object"/>
                           </Table>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" value=""/>
