--- a/src/PreservaView/MainWindowUI.form
+++ b/src/PreservaView/MainWindowUI.form
@@ -350,7 +350,7 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jPanel7" alignment="1" pref="962" max="32767" attributes="0"/>
+                      <Component id="jPanel7" alignment="1" pref="978" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -499,7 +499,7 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="14" max="32767" attributes="0"/>
                               <Component id="btnCreateInsamling" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                           </Group>
@@ -682,7 +682,7 @@
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="jPanel6" min="-2" pref="345" max="-2" attributes="0"/>
+                          <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="27" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -767,7 +767,7 @@
                                   <Component id="jLabel18" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="customerPostCodeTxtField" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="17" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="createNewCustomerBtn" pref="33" max="32767" attributes="0"/>
                                   <Component id="jButton3" max="32767" attributes="0"/>
@@ -780,11 +780,17 @@
                   <SubComponents>
                     <Component class="javax.swing.JButton" name="jButton3">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="23" green="b0" red="94" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Insamlingsprofil"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JButton" name="createNewCustomerBtn">
                       <Properties>
+                        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                          <Color blue="23" green="b0" red="94" type="rgb"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" value="Skapa Ny Kund"/>
                       </Properties>
                       <Events>
